# EveryBeam

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.astron.yml  .gitlab-ci.common.yml  .gitlab-ci.ska.yml  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  Antenna.cc  Antenna.h  BeamFormer.cc  BeamFormer.h  CMakeLists.txt  Constants.h  Doxyfile.in  Element.cc  Element.h  ElementResponse.cc  ElementResponse.h  ITRFConverter.cc  ITRFConverter.h  ITRFDirection.cc  ITRFDirection.h  LICENSE  LofarMetaDataUtil.cc  LofarMetaDataUtil.h  MathUtil.cc  MathUtil.h  MutablePtr.h  README.md  Singleton.h  Station.cc  Station.h  Types.cc  Types.h  makeresponseimage.cc  pyeverybeam.cc  pystationresponse.cc  setup.py
cpp/: Antenna.cc  Antenna.h  BeamFormer.cc  BeamFormer.h  CMakeLists.txt  Element.cc  Element.h  ElementResponse.cc  ElementResponse.h  LofarMetaDataUtil.cc  LofarMetaDataUtil.h  Station.cc  Station.h  antenna.cc  antenna.h  beamformer.cc  beamformer.h  beamformeridenticalantennas.cc  beamformeridenticalantennas.h  beamformerlofar.cc  beamformerlofar.h  beamformerlofarhba.cc  beamformerlofarhba.h  beamformerlofarlba.cc  beamformerlofarlba.h  beammode.h  beamnormalisationmode.h  correctionmode.h  element.cc  element.h  element_response.cc  element_response.h  elementhamaker.cc  elementhamaker.h  elementresponse.cc  elementresponse.h  elementresponsefactory.cc  elementresponsefixeddirection.h  fieldresponse.h  load.cc  (+14 more)
cpp/aterms/: CMakeLists.txt  atermbase.cc  atermbase.h  atermbeam.h  atermconfig.cc  atermconfig.h  atermresampler.cc  atermresampler.h  cache.cc  cache.h  dldmaterm.cc  dldmaterm.h  everybeamaterm.cc  everybeamaterm.h  fitsaterm.cc  fitsaterm.h  fitsatermbase.cc  fitsatermbase.h  fourierfitter.cc  fourierfitter.h  fourierfittingaterm.cc  fourierfittingaterm.h  h5parmaterm.cc  h5parmaterm.h  klfitter.cc  klfitter.h  klfittingaterm.cc  klfittingaterm.h  pafbeamterm.cc  pafbeamterm.h  parsetprovider.h
cpp/circularsymmetric/: CMakeLists.txt  atcacoefficients.cc  atcacoefficients.h  coefficients.h  gmrtcoefficients.cc  gmrtcoefficients.h  vlabeam.cc  vlabeam.h  vlacoefficients.cc  vlacoefficients.h  voltagepattern.cc  voltagepattern.h
cpp/common/: CMakeLists.txt  Constants.h  MutablePtr.h  Singleton.h  Types.h  casa_utils.h  casautils.h  constants.h  fftresampler.cc  fftresampler.h  math_utils.h  mathutils.h  mutable_ptr.h  singleton.h  sphericalharmonics.cc  sphericalharmonics.h  system.h  types.h
cpp/coords/: CMakeLists.txt  ITRFConverter.cc  ITRFConverter.h  ITRFDirection.cc  ITRFDirection.h  coord_utils.h  coordutils.h  itrfconverter.cc  itrfconverter.h  itrfdirection.cc  itrfdirection.h
cpp/gridded_response/: CMakeLists.txt  griddedresponse.h  lofargrid.cc  lofargrid.h
cpp/griddedresponse/: CMakeLists.txt  aartfaacgrid.cc  aartfaacgrid.h  dishgrid.cc  dishgrid.h  griddedresponse.cc  griddedresponse.h  lofargrid.cc  lofargrid.h  mwagrid.cc  mwagrid.h  oskargrid.cc  oskargrid.h  phasedarraygrid.cc  phasedarraygrid.h  skamidgrid.cc  skamidgrid.h
cpp/hamaker/: CMakeLists.txt  HamakerCoeff.cc  HamakerCoeff.h  HamakerElementResponse.cc  HamakerElementResponse.h  hamakercoeff.cc  hamakercoeff.h  hamakerelementresponse.cc  hamakerelementresponse.h
cpp/lobes/: CMakeLists.txt  ElementResponse.cc  ElementResponse.h  LOBESElementResponse.cc  LOBESElementResponse.h  defaultcoeffhba.cc  defaultcoefflba.cc  lobeselementresponse.cc  lobeselementresponse.h  lobeselementresponsefixeddirection.h
cpp/mwabeam/: beam2016implementation.cc  beam2016implementation.h  factorialtable.h  recursivelock.h  tilebeam2016.cc  tilebeam2016.h
cpp/oskar/: CMakeLists.txt  OSKARDatafile.h  OSKARDataset.cc  OSKARDataset.h  OSKARElementResponse.cc  OSKARElementResponse.h  oskar.h  oskar_evaluate_spherical_wave_sum.cc  oskar_helper.h  oskardatafile.cc  oskardatafile.h  oskardataset.cc  oskardataset.h  oskarelementresponse.cc  oskarelementresponse.h
cpp/pointresponse/: CMakeLists.txt  aartfaacpoint.h  dishpoint.cc  dishpoint.h  lofarpoint.h  mwapoint.cc  mwapoint.h  oskarpoint.h  phasedarraypoint.cc  phasedarraypoint.h  pointresponse.h  skamidpoint.cc  skamidpoint.h
cpp/skamidbeam/: CMakeLists.txt  skamidanalyticalresponse.cc  skamidanalyticalresponse.h  skamidresponse.h
cpp/telescope/: CMakeLists.txt  dish.cc  dish.h  lofar.cc  lofar.h  mwa.cc  mwa.h  oskar.cc  oskar.h  phasedarray.cc  phasedarray.h  skamid.cc  skamid.h  telescope.h
cpp/test/: CMakeLists.txt  runtests.cc  taocommon.cc  tatermconfig.cc  tcache.cc  telementresponsefixeddirection.cc  tfourierfitter.cc  tfourierfittingaterm.cc  tgmrt.cc  tgriddedresponse.cc  th5parmaterm.cc  tklfitter.cc  tklfittingaterm.cc  tload_lofar.cc  tlofar.cc  tlofar_aartfaac.cc  tlofar_hba.cc  tlofar_lba.cc  (+7 more)
demo/: CMakeLists.txt  beam-helper.cpp  beam-helper.h  tDockerDP3  tElementBeamCommon.h  tElementBeamHamaker.cc  tElementBeamOSKARDipole.cc  tElementBeamOSKARSphericalWave.cc  tStation.cc  tStationBeamCommon.h  tStationBeamHamaker.cc  tStationBeamOSKARDipole.cc  tStationBeamOSKARSphericalWave.cc
doc/: CMakeLists.txt  Doxyfile.in  build-instructions.rst  conf.py  index.rst  indices-and-tables.rst  pages-index.html
oskar/: CMakeLists.txt  OSKARDatafile.cc  OSKARDatafile.h  OSKARDataset.cc  OSKARDataset.h  OSKARElementResponse.cc  OSKARElementResponse.h  OSKARSphericalWaveCoeff.cc  OSKARSphericalWaveCoeff.h  convert-oskar-to-hdf5.py  oskar_evaluate_dipole_pattern.cc  oskar_evaluate_spherical_wave_sum.cc  oskar_helper.h  oskar_matlab_to_hdf5.py  oskar_vector_types.h
package/: CMakeLists.txt
python/: CMakeLists.txt  placeholder.md  pyeverybeam.cc.tmp  readme.md
test/: CMakeLists.txt  Dockerfile  Dockerfile-base  Dockerfile-dp3  Dockerfile-lofarbeam  Dockerfile-wsclean  beam-helper.cpp  beam-helper.h  fitsiochecker.cpp  fitsreader.cpp  fitsreader.h  fitswriter.cpp  fitswriter.h  polarization.h  run-test.sh  tElementBeamCommon.h  tElementBeamHamaker.cc  tElementBeamOSKARDipole.cc  tElementBeamOSKARSphericalWave.cc  tStation.cc  tStationBeamCommon.h  tStationBeamHamaker.cc  tStationBeamOSKARDipole.cc  tStationBeamOSKARSphericalWave.cc
(+349 files in other folders)
